Webhook RD - Modal Error

--- a/css/style.css
+++ b/css/style.css
@@ -19075,4 +19075,8 @@ section {
 #ignismyModal .modal-header{
     border:0px;
 }
+
+#ignismyModal2 .modal-header{
+  border:0px;
+}
 /*--thank you pop ends here--*/
